{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 347,
  "lineage": "1548ce26-5be9-8cef-a3ae-b4f797c39de7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.77.124.245",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2019-08-21T03:04:37.472-07:00",
            "id": "nifi-dev-project/europe-west1/nifi-static-address",
            "name": "nifi-static-address",
            "network_tier": "PREMIUM",
            "project": "nifi-dev-project",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/regions/europe-west1/addresses/nifi-static-address"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-08-21T03:05:21.328-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-https",
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/global/networks/nifi-network",
            "priority": 1000,
            "project": "nifi-dev-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "nifi"
            ],
            "timeouts": null
          },
          "depends_on": [
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-08-21T03:05:21.137-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-internal",
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/global/networks/nifi-network",
            "priority": 1000,
            "project": "nifi-dev-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/global/firewalls/allow-internal",
            "source_ranges": [
              "10.127.0.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2019-08-21T03:05:21.231-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "allow-ssh",
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/global/networks/nifi-network",
            "priority": 1000,
            "project": "nifi-dev-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "depends_on": [
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nifi",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190813",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/zones/europe-west1-d/disks/nifi"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "nifi",
            "instance_id": "3795831711178205571",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-highcpu-4",
            "metadata_fingerprint": "162XV7sV8_U=",
            "metadata_startup_script": "\n        apt-get update \u0026\u0026 apt-get install openjdk-8-jdk unzip jq -y\n\n        NIFI_UID=10000\n        NIFI_GID=10000\n\n        groupadd -g ${NIFI_GID} nifi || groupmod -n nifi `getent group ${NIFI_GID} | cut -d: -f1` \\\n            \u0026\u0026 useradd --shell /bin/bash -u ${NIFI_UID} -g ${NIFI_GID} -m nifi \\\n            \u0026\u0026 mkdir -p /opt/nifi \\\n            \u0026\u0026 chown -R nifi:nifi /opt/nifi\n\n        su nifi -c 'curl -f [...]
            "name": "nifi",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.124.245",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/global/networks/nifi-network",
                "network_ip": "10.127.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/regions/europe-west1/subnetworks/nifi-network",
                "subnetwork_project": "nifi-dev-project"
              }
            ],
            "project": "nifi-dev-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/zones/europe-west1-d/instances/nifi",
            "tags": [
              "nifi"
            ],
            "tags_fingerprint": "oCMRTFkz3E0=",
            "zone": "europe-west1-d"
          },
          "depends_on": [
            "google_compute_address.static",
            "google_compute_instance.nifi-ca",
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nifi-ca",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190813",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "source": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/zones/europe-west1-d/disks/nifi-ca"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "id": "nifi-ca",
            "instance_id": "5055763339577174413",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "VJJX18lszXQ=",
            "metadata_startup_script": "\n        apt-get update \u0026\u0026 apt-get install openjdk-8-jdk unzip -y\n\n        NIFI_UID=10000\n        NIFI_GID=10000\n\n        groupadd -g ${NIFI_GID} nifi || groupmod -n nifi `getent group ${NIFI_GID} | cut -d: -f1` \\\n            \u0026\u0026 useradd --shell /bin/bash -u ${NIFI_UID} -g ${NIFI_GID} -m nifi \\\n            \u0026\u0026 mkdir -p /opt/nifi \\\n            \u0026\u0026 chown -R nifi:nifi /opt/nifi\n\n        su nifi -c 'curl -fSL  [...]
            "name": "nifi-ca",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.214.236",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/global/networks/nifi-network",
                "network_ip": "10.127.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/regions/europe-west1/subnetworks/nifi-network",
                "subnetwork_project": "nifi-dev-project"
              }
            ],
            "project": "nifi-dev-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/zones/europe-west1-d/instances/nifi-ca",
            "tags": [
              "nifi-ca"
            ],
            "tags_fingerprint": "W6hAMTYlYPE=",
            "zone": "europe-west1-d"
          },
          "depends_on": [
            "google_compute_subnetwork.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "nifi-network",
            "name": "nifi-network",
            "project": "nifi-dev-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/global/networks/nifi-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-08-21T03:04:54.265-07:00",
            "enable_flow_logs": false,
            "fingerprint": "N4YqWLEPkq4=",
            "gateway_address": "10.127.0.1",
            "id": "europe-west1/nifi-network",
            "ip_cidr_range": "10.127.0.0/20",
            "name": "nifi-network",
            "network": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/global/networks/nifi-network",
            "private_ip_google_access": true,
            "project": "nifi-dev-project",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifi-dev-project/regions/europe-west1/subnetworks/nifi-network"
          },
          "depends_on": [
            "google_compute_network.default"
          ]
        }
      ]
    }
  ]
}